--- a/index.html
+++ b/index.html
@@ -1,1 +1,161 @@
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Verificação</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background: #0b0f14;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+      color: #fff;
+    }
+
+    .card {
+      background: #121826;
+      width: 90%;
+      max-width: 420px;
+      padding: 30px;
+      border-radius: 15px;
+      text-align: center;
+      box-shadow: 0 0 20px rgba(0,0,0,.5);
+    }
+
+    .icon {
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      margin: 0 auto 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 32px;
+    }
+
+    .loading {
+      border: 4px solid #1f2937;
+      border-top: 4px solid #3b82f6;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+
+    .green {
+      background: #0f5132;
+      color: #22c55e;
+    }
+
+    .blue {
+      background: #1e3a8a;
+      color: #3b82f6;
+    }
+
+    button {
+      width: 100%;
+      padding: 14px;
+      margin-top: 20px;
+      border: none;
+      border-radius: 10px;
+      background: #3b82f6;
+      color: #fff;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .timer {
+      margin-top: 15px;
+      color: #60a5fa;
+      font-size: 18px;
+    }
+
+    .footer {
+      margin-top: 25px;
+      font-size: 12px;
+      color: #6b7280;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- ETAPA 1 -->
+  <div class="card" id="step1">
+    <div class="icon blue">
+      <div class="loading"></div>
+    </div>
+    <h2>Verificando usuário</h2>
+    <p>Aguarde enquanto validamos suas credenciais...</p>
+  </div>
+
+  <!-- ETAPA 2 -->
+  <div class="card hidden" id="step2">
+    <div class="icon blue">🛡️</div>
+    <h2>Checando permissões</h2>
+    <p>Validando acesso ao servidor...</p>
+  </div>
+
+  <!-- ETAPA 3 -->
+  <div class="card hidden" id="step3">
+    <div class="icon green">✔</div>
+    <h2 style="color:#22c55e">Verificado com sucesso!</h2>
+    <p>Sua autenticação foi concluída. Bem-vindo ao servidor!</p>
+
+    <div class="timer">
+      Redirecionamento automático em <span id="count">30</span>s
+    </div>
+
+    <button onclick="voltar()">Retornar ao Servidor</button>
+
+    <div class="footer">Zend Applications</div>
+  </div>
+
+  <script>
+    setTimeout(() => {
+      document.getElementById("step1").classList.add("hidden");
+      document.getElementById("step2").classList.remove("hidden");
+    }, 3000);
+
+    setTimeout(() => {
+      document.getElementById("step2").classList.add("hidden");
+      document.getElementById("step3").classList.remove("hidden");
+      iniciarTimer();
+    }, 6000);
+
+    let tempo = 30;
+
+    function iniciarTimer() {
+      const span = document.getElementById("count");
+      const intervalo = setInterval(() => {
+        tempo--;
+        span.innerText = tempo;
+        if (tempo <= 0) {
+          clearInterval(intervalo);
+          voltar();
+        }
+      }, 1000);
+    }
+
+    function voltar() {
+      // COLOQUE AQUI O LINK DO SEU SERVIDOR DISCORD
+      window.location.href = "https://discord.gg/SEULINK";
+    }
+  </script>
+
+</body>
+</html>
