--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     function voltar() {
       // COLOQUE AQUI O LINK DO SEU SERVIDOR DISCORD
-      window.location.href = "https://discord.gg/SEULINK";
+      window.location.href = https://discord.gg/X7BFgRpM7D;
     }
   </script>
 
